blue-green/multi-service/app-b-ver2.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-b-v2
  labels:
    app: go-app
spec:
  ports:
  - name: http
    port: 80
    targetPort: http

  # Note here that we match both the app and the version
  selector:
    app: go-app-b
    version: v2.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-b-v2
  labels:
    app: go-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app-b
      version: v2.0.0
  template:
    metadata:
      labels:
        app: go-app-b
        version: v2.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9101"
    spec:
      containers:
      - name: go-app-b
        image: aplimasolutions/kube-deployment-strategies
        ports:
        - name: http
          containerPort: 8080
        - name: probe
          containerPort: 8086
        livenessProbe:
          httpGet:
            path: /live
            port: probe
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: probe
          periodSeconds: 5
