blue-green/multi-service/ingress-ver1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app
  labels:
    app: go-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: a.domain.com
    http:
      paths:
      - backend:
          serviceName: go-app-a-v1
          servicePort: 80
  - host: b.domain.com
    http:
      paths:
      - backend:
          serviceName: go-app-b-v1
          servicePort: 80
