blue-green/multi-service/ingress-ver2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app
  labels:
    app: go-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: a.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-app-a-v2
            port: 
              number: 80
  - host: b.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-app-b-v2
            port: 
              number: 80
